--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=aPenguinL_StoreShop
 sonar.organization=apenguinl
-
+sonar.java.binaries=target/classes
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=StoreShop
 #sonar.projectVersion=1.0
